crates/host-macros/tests/compile_fail/program_without_command_mode.rs
omnia_host_macros::runtime!({
    program: "mytool",
    config: "omnia.toml",
});

fn main() {}
