crates/host-macros/tests/compile_fail/program_without_command_mode.stderr
error: `program:` requires `mode: command`
 --> tests/compile_fail/program_without_command_mode.rs:2:5
  |
2 |     program: "mytool",
  |     ^^^^^^^
